--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
     <link rel="stylesheet" href="./src/main/static/resources/static/includes/plugins.css" />
-    <link rel="stylesheet" href="../static/includes/style.css" />
+    <link rel="stylesheet" href="./static/includes/style.css" />
 
-  <script src="../static/includes/js/custom.js"></script>
-  <script src="../static/includes/js/jquery.js"></script>
-  <script src="../static/includes/js/plugins.js"></script>
-  <script src="../static/includes/js/plugins2.js"></script>
+  <script src="./src/main/static/resources/static/includes/js/custom.js"></script>
+  <script src="./src/main/static/resources/static/includes/js/jquery.js"></script>
+  <script src="./src/main/static/resources/static/includes/js/plugins.js"></script>
+  <script src="./src/main/static/resources/static/includes/js/plugins2.js"></script>
 
 </head>
 <body>
