--- a/index.html
+++ b/index.html
@@ -262,15 +262,15 @@
 </header>
 
 
-<div class="container" style="background-image: url(src/main/resources/static/includes/images/uploads/error-bg.jpg); width: 100%;" >
+<div class="container" style="background-image: url(src/main/resources/static/includes/images/uploads/error-bg.jpg); width: 100%;">
 
-  <div class="row" style="margin-top: 10%;">
-      <h2 style="font-size: 25px; color: white; text-align: left; margin-left: 50px">추천영화</h2>
-      
-        <div class="col-md-3">
-            <div class="movie-item" id="movie1" style="margin-left: 10%;">
+    <div class="row" style="margin-top: 10%;">
+        <h2 style="font-size: 25px; color: white; text-align: center;">추천영화</h2>
+
+        <div class="col-xs-12 col-md-3 text-center mb-3">
+            <div class="movie-item">
                 <div class="mv-img">
-                    <img src="src/main/resources/static/imgs/movie/엘리멘탈.jpeg" alt="" style="width: 90%; height: 385px; opacity: 0.8; margin: auto;">
+                    <img src="src/main/resources/static/imgs/movie/엘리멘탈.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8; margin: auto;">
                 </div>
                 <div class="title-in">
                     <h4 style="color: white;">엘리멘탈</h4>
@@ -279,10 +279,10 @@
             </div>
         </div>
 
-        <div class="col-md-3">
-            <div class="movie-item" id="movie2">
+        <div class="col-xs-12 col-md-3 text-center mb-3">
+            <div class="movie-item">
                 <div class="mv-img">
-                    <img src="src/main/resources/static/imgs/movie/샤잠.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8;margin: auto;">
+                    <img src="src/main/resources/static/imgs/movie/샤잠.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8; margin: auto;">
                 </div>
                 <div class="title-in">
                     <h4 style="color: white;">샤잠! 신들의 분노</h4>
@@ -291,35 +291,34 @@
             </div>
         </div>
 
-        <div class="col-md-3">
-          <div class="movie-item" id="movie2">
-              <div class="mv-img">
-                  <img src="src/main/resources/static/imgs/movie/스파이더맨.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8;margin: auto;">
-              </div>
-              <div class="title-in">
-                  <h4 style="color: white;">스파이더맨: 어크로스 더 유니버스</h4>
-                  <p><i class="ion-android-star"></i><span>8.0 / 10</span></p>
-              </div>
-          </div>
+        <div class="col-xs-12 col-md-3 text-center mb-3">
+            <div class="movie-item">
+                <div class="mv-img">
+                    <img src="src/main/resources/static/imgs/movie/스파이더맨.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8; margin: auto;">
+                </div>
+                <div class="title-in">
+                    <h4 style="color: white;">스파이더맨: 어크로스 더 유니버스</h4>
+                    <p><i class="ion-android-star"></i><span>8.0 / 10</span></p>
+                </div>
+            </div>
         </div>
 
-        <div class="col-md-3">
-          <div class="movie-item" id="movie2">
-              <div class="mv-img">
-                  <img src="src/main/resources/static/imgs/movie/애스터로이드시티.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8;margin: auto;">
-              </div>
-              <div class="title-in">
-                  <h4 style="color: white;">애스터로이드 시티</h4>
-                  <p><i class="ion-android-star"></i><span>6.0 / 10</span></p>
-              </div>
-          </div>
+        <div class="col-xs-12 col-md-3 text-center mb-3">
+            <div class="movie-item">
+                <div class="mv-img">
+                    <img src="src/main/resources/static/imgs/movie/애스터로이드시티.jpeg" alt="" style="width: 80%; height: 385px; opacity: 0.8; margin: auto;">
+                </div>
+                <div class="title-in">
+                    <h4 style="color: white;">애스터로이드 시티</h4>
+                    <p><i class="ion-android-star"></i><span>6.0 / 10</span></p>
+                </div>
+            </div>
         </div>
-        
 
-      </div>
-      <br>
-  </div>
+    </div>
+    <br>
 </div>
+
 
 
 <div class="movie-items">
